Fix search bar on mobile devices when inside tabs
[MAILPOET-2775]

--- a/assets/css/src/components/_tabs.scss
+++ b/assets/css/src/components/_tabs.scss
@@ -2,6 +2,13 @@
   clear: both;
   position: relative;
   z-index: 1;
+
+  @include respond-to(small-screen) {
+    p.search-box {
+      left: $grid-gap;
+      width: calc(100% - 2 * #{$grid-gap});
+    }
+  }
 }
 
 .mailpoet-tabs-is-open {
